# icfp-contest-2014

./: .gitignore  BIG  ICFP.cabal  ICFP.tar.gz.sha1sum  OUTPUT  README  a  cabal.config  cabal.sandbox.config  dbg.hs  make_solution.sh  test.hl  test.hl.out  test2.hl
GH/: ghost2.hg  ghost2.hg.out  test.hg  test.hg.out  test2.hg  test2.hg.out
GH/v2/: ghost1.hg  ghost1.hg.out  ghost2.hg  ghost2.hg.out  ghost3.hg  ghost3.hg.out  ghost4.hg  ghost4.hg.out
LM/: MAP GH  lambdaman.hl  lambdaman.hl.out  lambdaman_source.hl  lambdaman_source.hl.save  lambdaman_source.hl.save2  make_btree.py  make_heap.py  make_lambdaman.sh  make_quadtree.py  make_quadtree_256.py  save.hl  test.hl  test2.hl  test2.hl.out
lib/Lib/: GCC.hs  GHC.hs  GHCParser.hs  HL.hs  HLParser.hs
src/: Main.hs
