-- ICFP Contest 2014

name:                icfp
version:             0
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Lib.GCC,
                       Lib.HL,
                       Lib.HLParser,
                       Lib.GHC,
                       Lib.GHCParser
  
  hs-source-dirs:      lib
  build-depends:       base,
                       containers,
                       mtl,
                       either,
                       vector,
                       bifunctors,
                       transformers,
                       utf8-string,
                       parsec,
                       optparse-applicative,
                       bytestring,
                       hashable,
                       hashable-generics,
                       free

  default-language:    Haskell2010

executable ICFP
  main-is:             Main.hs
  build-depends:       base,
                       containers,
                       mtl,
                       either,
                       vector,
                       bifunctors,
                       transformers,
                       utf8-string,
                       parsec,
                       optparse-applicative,
                       bytestring,
                       hashable,
                       hashable-generics,
                       free,
                       icfp

  hs-source-dirs:      src
  default-language:    Haskell2010